nullaway_error_041A509A-D5FB-4BBB-AE4F-D24EE7E44D08.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/config/DependencyDescriptor.java:417: error: [NullAway] dereferenced expression otherDesc is @Nullable
		return (this.required == otherDesc.required && this.eager == otherDesc.eager &&
		                                  ^
    (see http://t.uber.com/nullaway )
